Mejora de aspectos del idioma

--- a/ClientApp/studycolors.html
+++ b/ClientApp/studycolors.html
@@ -33,19 +33,19 @@
         <h4>Pasa el cursor por los colores para verlos.</h4>
         <div id="PaletaDiv" class="mx-auto d-block" tabindex="0">
             <div class="green" tabindex="0">
-                <h3 class="hover-text" aria-hidden="true">Verde<br />Green<br /></h3>
+                <p class="hover-text" aria-hidden="true">Verde<br /> <i lang = "en">Green </i> <br /></p>
             </div>
             <div class="red" tabindex="0">
-                <h3 class="hover-text" aria-hidden="true">Rojo<br />Red<br /></h3>
+                <p class="hover-text" aria-hidden="true">Rojo<br /> <i lang = "en">Red </i> <br /></p>
             </div>
             <div class="blue" tabindex="0">
-                <h3 class="hover-text" aria-hidden="true">Azul<br />Blue<br /></h3>
+                <p class="hover-text" aria-hidden="true">Azul<br /> <i lang = "en">Blue </i> <br /></p>
             </div>
             <div class="yellow" tabindex="0">
-                <h3 class="hover-text" aria-hidden="true">Amarillo<br />Yellow<br /></h3>
+                <p class="hover-text" aria-hidden="true">Amarillo<br /> <i lang = "en">Yellow </i> <br /></p>
             </div>
             <div class="white" tabindex="0">
-                <h3 class="hover-text" aria-hidden="true">Blanco<br />White<br /></h3>
+                <p class="hover-text" aria-hidden="true">Blanco<br /> <i lang = "en">White </i> <br /></p>
             </div>
         </div>
 
