--- a/ClientApp/studycolors.html
+++ b/ClientApp/studycolors.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MIAU - Modo estudio colores</title>
     <style type="text/css">
         @import url("./styles/studyActivities/studyColors.css");
