--- a/ClientApp/customizeUmberto.html
+++ b/ClientApp/customizeUmberto.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MIAU</title>
     <style type="text/css">
         @import url("./styles/Umberto.css");
@@ -25,71 +26,66 @@
     <h1>¡Personaliza a Umberto!</h1>
     <h4>Selecciona el elemento que quieras que Umberto lleve puesto.</h4>
     <div id="outerDiv" class="container text-center">
-        <div class="row">
+        <div class="row align-items-center">
             <div id="elementos" class="col col-auto col-md-8">
                 <div class="row row-cols-2 row-cols-lg-3">
                     <div class="col">
-                        <div class="card">
+                        <div class="card" id="a1">
                             <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
-                            <div class="card-body" style="background-color: aqua;">
+                            <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card" id="a2">
                             <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
-                            <div class="card-body" style="background-color: aqua;">
+                            <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card" id="a3">
                             <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
-                            <div class="card-body" style="background-color: aqua;">
+                            <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card" id="a4">
                             <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
-                            <div class="card-body" style="background-color: aqua;">
+                            <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card" id="a5">
                             <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
-                            <div class="card-body" style="background-color: aqua;">
+                            <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card" id="a6">
                             <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
-                            <div class="card-body" style="background-color: aqua;">
+                            <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="Umberto" class="col col-auto col-lg-4">
-                <img src="./resources/solo-gatito.png" alt="Umberto" /> <!-- Hacer dependiente en React -->
+            <div id="Umberto" class="col col-lg">
+                <img src="./resources/solo-gatito.png" alt="Umberto" />
             </div>
         </div>
     </div>
 
-    <button id="changeColorsButton" class="mx-auto d-block">
-        <label>¡M&aacute;s colores!</label>
-    </button>
-
-
-    <script src="js/colorStudy.js"></script>
+    <script src="js/customize.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
