--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -15,9 +15,8 @@
 <body style="overflow: hidden;">
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
-            <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
-                onclick="window.location.href = './index.html';">
-                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
+            <button class="btn btn-primary" id="back" onclick="window.location.href = 'index.html';">
+                <img src="resources/arrow.png" alt="flecha volver atrás" style="width:40px" />
             </button>
         </div>
     </nav>
@@ -28,23 +27,29 @@
                 right: 0; margin: 20px; z-index: 1; transform: scaleY(-1);" id="gatitoMenu" alt="logo">
         </div>
         <div class="bubble2">
-            <img src="./resources/bubbles/bubbleMenuBotones.png" id="bubbleMenu" style="display: block;">
-            <img src="./resources/bubbles/bubbleMenuModoPractica.png" id="bubblePractica" style="display:none">
-            <img src="./resources/bubbles/bubbleMenuModoEstudio.png" id="bubbleEstudio" style="display:none">
-            <img src="./resources/bubbles/bubbleMenuTienda.png" id="bubbleTienda" style="display:none">
+            <img src="./resources/bubbles/bubbleMenuBotones.png"
+                aria-label="¡Hola! Si pasas sobre los botones te daré más detalles sobre su función."
+                longdesc="¡Hola! Si pasas sobre los botones te daré más detalles sobre su función."
+                alt="bocadillo de diálogo del menu" id="bubbleMenu" style="display: block;">
+            <img src="./resources/bubbles/bubbleMenuModoPractica.png" alt="bocadillo de diálogo del modo práctica"
+                aria-label="En el modo práctica podrás comprobar todo lo que has aprendido hasta ahora"
+                longdesc="En el modo práctica podrás comprobar todo lo que has aprendido hasta ahora"
+                id="bubblePractica" style="display:none">
+            <img src="./resources/bubbles/bubbleMenuModoEstudio.png" alt="bocadillo de diálogo del modo estudio"
+                aria-label="Aqui podrás aprender nuevas palabras" desc="Aqui podrás aprender nuevas palabras"
+                id="bubbleEstudio" style="display:none">
+            <img src="./resources/bubbles/bubbleMenuTienda.png" alt="bocadillo de diálogo del modo tienda"
+                id="bubbleTienda" aria-label="Por ahora la tienda está deshabilitada"
+                longdesc="Por ahora la tienda está deshabilitada" style="display:none">
         </div>
-        <div class="bg-image container-fluid"
+        <div class="bg-image container-fluid" id="background"
             style="background-image: url('./resources/Background.png'); height: 100vh;"
             style="position: relative; z-index: 0;">
-            <div class="container-fluid"
-                style="width: 81%; position: absolute; top: 100px; left: 19%; display: flex; justify-content:center;">
-                <div class="card botonPractica" style="background-color: #C3F1FF; width: 43%;">
-                    <a href="practicemode.html" class="fill-div" style="display: flex; justify-content: center;">
-
-                        <h1 style="top: 80%; left: 18%;">¡Práctica!</h1>
-                        <img src="./resources/Mapa aventura.png" alt="img"
-                            style="margin-bottom: 29%; margin-left: 3%; margin-right: 3%; height: 63%; margin-top: 4%;">
-                    </a>
+            <div class="container-fluid" id="wrapperMapa">
+                <div class="card botonPractica" id="practica">
+                    <img src="./resources/Mapa aventura.png" alt="img" id="imgPractica">
+                    <a href="practicemode.html" class="btn btn-primary" id="btnpractica">¡Practica las palabras que has
+                        aprendido!</a>
 
                 </div>
                 <div class="container-fluid" style="display: flex; flex-direction: column;">
@@ -58,20 +63,17 @@
                         </a>
                     </div>
 
-                    <div class="card p-3 botonTienda" style="background-color: #C3F1FF; height: 67%; width: 43%; margin-top: 1.5%;">
-                        <a href="mainmenu.html">
-                        </a>
-                        <h1 style="top: 21%; left: 33%;">Tienda</h1>
+                    <div class="card p-3 botonTienda" id="tienda">
+                        <a href="customizeUmberto.html" class="btn btn-primary">Personaliza a Umberto</a>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-        <script src="./js/mainmenu.js"></script>
-        <script src="./js/gatojump.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                crossorigin="anonymous"></script>
+            <script src="./js/mainmenu.js"></script>
+            <script src="./js/gatojump.js"></script>
 </body>
 
 </html>
