--- a/ClientApp/practiceactivity3.html
+++ b/ClientApp/practiceactivity3.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MIAU - Pr&aacute;tica los números</title>
     <style type="text/css">
         @import url("./styles/generalGameStyles.css");
@@ -39,10 +40,9 @@
         <div id="letters" aria-label="Letras sin usar"></div>
         <button id="verify" disabled="true" aria-disabled="true">Verificar</button>
     </div>
-</body>
-<script src="js/numberGame.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    <script src="js/numberGame.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
-
+</body>
 </html>
