--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MIAU - Modo práctica</title>
     <style type="text/css">
         @import url("./styles/commonStyles.css");
