--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+
     <title>MIAU - Menú principal</title>
     <style type="text/css">
         @import url("styles/mainMenu.css");
@@ -11,9 +12,10 @@
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        
 </head>
 
-<body style="overflow: hidden;">
+<body>
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
             <button class="btn btn-primary" id="back"
