--- a/ClientApp/practiceactivity.html
+++ b/ClientApp/practiceactivity.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MIAU - Modo pr&acute;ctica colores</title>
-    <style type="text/css">
+    <title>MIAU - Modo pr&aacute;ctica colores</title>
+    <style>
         @import url("./styles/generalGameStyles.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
@@ -17,7 +17,7 @@
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
                 onclick="window.location.href = 'practicemode.html';">
-                <img src="resources/arrow.png" alt="ReturnArrow" longdesc="botón para volver al menún del modo estudio" style="width:40px" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso" style="width:40px">
             </button>
         </div>
         <div class="col">
@@ -39,13 +39,12 @@
         </div>
 
         <div id="letters" aria-label="Letras sin usar"></div>
-        <button id="verify" disabled="true" aria-disabled="true">Verificar</button>
+        <button id="verify" disabled>Verificar</button>
     </div>
 
-</body>
-<script src="js/colorGame.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    <script src="js/colorGame.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
-
+</body>
 </html>
