--- a/ClientApp/studycolors.html
+++ b/ClientApp/studycolors.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MIAU - Modo estudio colores</title>
-    <style type="text/css">
+    <style>
         @import url("./styles/studyActivities/studyColors.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
@@ -18,7 +18,8 @@
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
                 onclick="window.location.href = 'studymode.html';">
-                <img src="resources/arrow.png" alt="Flecha de retroceso" longdesc="botón para volver al menún del modo estudio" style="width:40px" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso" 
+                 style="width:40px">
             </button>
         </div>
     </nav>
@@ -34,19 +35,19 @@
         <h4>Pasa el cursor por los colores para verlos.</h4>
         <div id="PaletaDiv" class="mx-auto d-block" tabindex="0">
             <div class="green" tabindex="0">
-                <p class="hover-text" aria-hidden="true">Verde<br /> <i lang = "en">Green </i> <br /></p>
+                <p class="hover-text" aria-hidden="true">Verde<br> <i lang = "en">Green </i> <br></p>
             </div>
             <div class="red" tabindex="0">
-                <p class="hover-text" aria-hidden="true">Rojo<br /> <i lang = "en">Red </i> <br /></p>
+                <p class="hover-text" aria-hidden="true">Rojo<br> <i lang = "en">Red </i> <br></p>
             </div>
             <div class="blue" tabindex="0">
-                <p class="hover-text" aria-hidden="true">Azul<br /> <i lang = "en">Blue </i> <br /></p>
+                <p class="hover-text" aria-hidden="true">Azul<br> <i lang = "en">Blue </i> <br></p>
             </div>
             <div class="yellow" tabindex="0">
-                <p class="hover-text" aria-hidden="true">Amarillo<br /> <i lang = "en">Yellow </i> <br /></p>
+                <p class="hover-text" aria-hidden="true">Amarillo<br> <i lang = "en">Yellow </i> <br></p>
             </div>
             <div class="white" tabindex="0">
-                <p class="hover-text" aria-hidden="true">Blanco<br /> <i lang = "en">White </i> <br /></p>
+                <p class="hover-text" aria-hidden="true">Blanco<br> <i lang = "en">White </i> <br></p>
             </div>
         </div>
 
