--- a/ClientApp/practiceactivity3.html
+++ b/ClientApp/practiceactivity3.html
@@ -17,7 +17,7 @@
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
                 onclick="window.location.href = 'practicemode.html';">
-                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso" style="width:40px" />
             </button>
         </div>
         <div class="col">
