--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MIAU - Modo práctica</title>
-    <style type="text/css">
+    <style>
         @import url("./styles/commonStyles.css");
         @import url("./styles/practicemodeStyles.css");
     </style>
@@ -18,8 +18,8 @@
   <div class="mb-3">
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
       <div class="container-fluid">
-          <a href="mainmenu.html" alt="Barra de regreso para volver al menú">
-              <button style="background: transparent; outline: none; border: 0; width: 60px;" type="button" aria-label="Boton atras"><img src="./resources/arrow.png" alt="Imagen de una flecha de retroceso" style="width: 100%;"></button>
+          <a href="mainmenu.html">
+              <button style="background: transparent; outline: none; border: 0; width: 60px;" type="button" aria-label="Boton atras"><img src="./resources/arrow.png" alt="Flecha de retroceso" style="width: 100%;"></button>
           </a>
       </div>
     </nav>
@@ -42,7 +42,7 @@
       <div class="row pt-2">
         <div class="col col-custom"> 
           <div>
-            <button class="btn-custom botones buttonColores" aria-label="Botón colores" alt="Botón tema colores" onclick="window.location.href = 'practiceactivity.html';">
+            <button class="btn-custom botones buttonColores" aria-label="Botón colores" onclick="window.location.href = 'practiceactivity.html';">
               <svg class="svgColores svgBoton"></svg>              
             </button>
           </div>
@@ -58,7 +58,7 @@
         </div>
         <div class="col col-custom">
           <div>
-            <button class="btn-custom botones buttonAnimales" aria-label="Botón tema animales" alt="Botón tema animales" onclick="window.location.href = 'practiceactivity2.html';">
+            <button class="btn-custom botones buttonAnimales" aria-label="Botón tema animales" onclick="window.location.href = 'practiceactivity2.html';">
               <svg class="svgAnimales svgBoton"></svg>              
             </button>
           </div>
@@ -68,7 +68,7 @@
       <div class="row mt-n1">
         <div class="col col-custom"> 
           <div>
-            <button class="btn-custom botones buttonNumeros" aria-label="Botón tema números" alt="Botón tema números" onclick="window.location.href = 'practiceactivity3.html';">
+            <button class="btn-custom botones buttonNumeros" aria-label="Botón tema números" onclick="window.location.href = 'practiceactivity3.html';">
               <svg class="svgNumeros svgBoton"></svg>              
             </button>
           </div>
