--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -18,9 +18,10 @@
   <div class="mb-3">
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
       <div class="container-fluid">
-          <a href="mainmenu.html">
-              <button style="background: transparent; outline: none; border: 0; width: 60px;" type="button" aria-label="Boton atras"><img src="./resources/arrow.png" alt="Flecha de retroceso" style="width: 100%;"></button>
-          </a>
+        <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
+                onclick="window.location.href = 'mainmenu.html';">
+                <img src="resources/arrow.png" alt="Flecha de retroceso" style="width:40px" />
+        </button>
       </div>
     </nav>
   </div>
