Customize Umberto finished! (4 accesories remain)

--- a/ClientApp/customizeUmberto.html
+++ b/ClientApp/customizeUmberto.html
@@ -16,9 +16,8 @@
 <body style="background-color: rgb(243, 229, 167);">
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
-            <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
-                onclick="window.location.href = 'mainmenu.html';">
-                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
+            <button id="back" class="btn btn-primary" onclick="window.location.href = 'mainmenu.html';">
+                <img src="resources/arrow.png" alt="ReturnArrow" />
             </button>
         </div>
     </nav>
@@ -31,7 +30,7 @@
                 <div class="row row-cols-2 row-cols-lg-3">
                     <div class="col">
                         <div class="card" id="a1">
-                            <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
+                            <img class="card-img-top" src="./resources/Umberto/Complementos/Lazo.png" alt="Lazo" />
                             <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
@@ -39,7 +38,7 @@
                     </div>
                     <div class="col">
                         <div class="card" id="a2">
-                            <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
+                            <img class="card-img-top" src="./resources/Umberto/Complementos/Gafas.png" alt="Gafas" />
                             <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
@@ -80,7 +79,7 @@
                 </div>
             </div>
             <div id="Umberto" class="col col-lg">
-                <img src="./resources/solo-gatito.png" alt="Umberto" />
+                <img src="./resources/Umberto/solo-gatito.png" alt="Umberto" />
             </div>
         </div>
     </div>
