--- a/ClientApp/studymode.html
+++ b/ClientApp/studymode.html
@@ -19,8 +19,7 @@
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
                 onclick="window.location.href = 'mainmenu.html';">
-                <img src="resources/arrow.png" alt="Flecha de retroceso"
-                    longdesc="Pulsa aquí para volver al menú principal." style="width:40px" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso" style="width:40px" />
             </button>
         </div>
     </nav>
@@ -71,7 +70,7 @@
                 alt="¡Vamos a aprender juntos/as! ¡Meow!">
         </div>
         <div class="gatito">
-            <img src="./resources/solo-gatito.png" id="gatete" alt="Umberto" longdesc="Nuestro gato, Umberto.">
+            <img src="./resources/solo-gatito.png" id="gatete" class="Umberto" alt="Umberto">
         </div>
     </div>
 
@@ -83,6 +82,7 @@
         crossorigin="anonymous"></script>
 
     <script src="./js/gatojump.js"></script>
+    <script src="./js/Umberto.js"></script>
 </body>
 
 </html>
