--- a/ClientApp/studynumbers.html
+++ b/ClientApp/studynumbers.html
@@ -18,8 +18,7 @@
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
                 onclick="window.location.href = 'studymode.html';">
-                <img src="resources/arrow.png" alt="Flecha de retroceso"
-                    longdesc="Pulsa aquí para volver al modo estudio." style="width: 40px" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso" style="width: 40px" />
             </button>
         </div>
     </nav>
