--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -17,45 +17,40 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
             <button class="btn btn-primary" id="back" onclick="window.location.href = 'index.html';">
-                <img src="resources/arrow.png" alt="flecha volver atrás" style="width:40px" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso" />
             </button>
         </div>
     </nav>
     <h1 id="nombre"></h1>
     <div id="umberto-wrapper">
         <div class="bg-image d-flex align-items-center justify-content-center">
-            <img src="./resources/solo-gatito.png" class="gato" id="gatitoMenu" alt="logo">
+            <img src="./resources/Umberto/solo-gatito.png" class="Umberto" id="gatitoMenu" alt="logo">
         </div>
         <div class="bubble2">
             <img src="./resources/bubbles/bubbleMenuBotones.png"
                 aria-label="¡Hola! Si pasas sobre los botones te daré más detalles sobre su función."
-                longdesc="¡Hola! Si pasas sobre los botones te daré más detalles sobre su función."
                 alt="bocadillo de diálogo del menu" id="bubbleMenu" style="display: block;">
             <img src="./resources/bubbles/bubbleMenuModoPractica.png" alt="bocadillo de diálogo del modo práctica"
                 aria-label="En el modo práctica podrás comprobar todo lo que has aprendido hasta ahora"
-                longdesc="En el modo práctica podrás comprobar todo lo que has aprendido hasta ahora"
                 id="bubblePractica" style="display:none">
             <img src="./resources/bubbles/bubbleMenuModoEstudio.png" alt="bocadillo de diálogo del modo estudio"
-                aria-label="Aqui podrás aprender nuevas palabras" desc="Aqui podrás aprender nuevas palabras"
-                id="bubbleEstudio" style="display:none">
+                aria-label="Aqui podrás aprender nuevas palabras" id="bubbleEstudio" style="display:none">
             <img src="./resources/bubbles/bubbleMenuTienda.png" alt="bocadillo de diálogo del modo tienda"
-                id="bubbleTienda" aria-label="Por ahora la tienda está deshabilitada"
-                longdesc="Por ahora la tienda está deshabilitada" style="display:none">
+                id="bubbleTienda" aria-label="¡Personaliza a nuestro gato, Umberto!" style="display:none">
         </div>
         <div class="bg-image container-fluid" id="background"
             style="background-image: url('./resources/Background.png'); height: 100vh;"
             style="position: relative; z-index: 0;">
             <div class="container-fluid" id="wrapperMapa">
                 <div class="card botonPractica" id="practica">
-                    <img src="./resources/Mapa aventura.png" alt="img" id="imgPractica">
+                    <img src="./resources/Mapa aventura.png" alt="img" id="imgPractica" />
                     <a href="practicemode.html" class="btn btn-primary" id="btnpractica">¡Practica las palabras que has
                         aprendido!</a>
-
                 </div>
 
                 <div class="container-fluid" id="wrapperEstudio">
                     <div class="card p-3 botonEstudio" id="estudio">
-                        <img src="./resources/estudio.png" alt="img" id="imgEstudio">
+                        <img src="./resources/estudio.png" alt="img" id="imgEstudio" />
                         <a href="studymode.html" class="btn btn-primary">Aprende nuevas palabras en inglés</a>
                     </div>
 
@@ -64,12 +59,14 @@
                     </div>
                 </div>
             </div>
-
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous"></script>
-            <script src="./js/mainmenu.js"></script>
-            <script src="./js/gatojump.js"></script>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="./js/mainmenu.js"></script>
+    <script src="./js/gatojump.js"></script>
+    <script src="./js/Umberto.js"></script>
 </body>
 
 </html>
