--- a/ClientApp/practiceactivity.html
+++ b/ClientApp/practiceactivity.html
@@ -15,9 +15,8 @@
 <body>
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
-            <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
-                onclick="window.location.href = 'practicemode.html';">
-                <img src="resources/arrow.png" alt="ReturnArrow" longdesc="botón para volver al menún del modo estudio" style="width:40px" />
+            <button id="back" class="btn btn-primary" onclick="window.location.href = 'practicemode.html';">
+                <img src="resources/arrow.png" alt="Flecha de retroceso" />
             </button>
         </div>
         <div class="col">
@@ -42,10 +41,10 @@
         <button id="verify" disabled="true" aria-disabled="true">Verificar</button>
     </div>
 
+    <script src="js/colorGame.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
-<script src="js/colorGame.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
 
 </html>
