--- a/ClientApp/customizeUmberto.html
+++ b/ClientApp/customizeUmberto.html
@@ -46,7 +46,8 @@
                     </div>
                     <div class="col">
                         <div class="card" id="a3">
-                            <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
+                            <img class="card-img-top" src="./resources/Umberto/Complementos/Sombrero.png"
+                                alt="Sombrero" />
                             <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
