Added two accesories and improved accesibility
Improved the beginning of all study activities

--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -108,7 +108,7 @@
       alt="Diálogo de Umberto indicando que tienes que seleccionar un juego">
   </div>
   <div class="gatito">
-    <img src="./resources/solo-gatito.png" id="gatito" class="Umberto" aria-label="Gato Umberto"
+    <img src="./resources/Umberto/solo-gatito.png" id="gatito" class="Umberto" aria-label="Gato Umberto"
       alt="Imagen del gato Umberto">
   </div>
 
