--- a/ClientApp/studymode.html
+++ b/ClientApp/studymode.html
@@ -69,7 +69,7 @@
                 alt="¡Vamos a aprender juntos/as! ¡Meow!">
         </div>
         <div class="gatito">
-            <img src="./resources/solo-gatito.png" id="gatete" class="Umberto" alt="Umberto">
+            <img src="./resources/Umberto/solo-gatito.png" id="gatete" class="Umberto" alt="Umberto">
         </div>
     </div>
 
