--- a/ClientApp/customizeUmberto.html
+++ b/ClientApp/customizeUmberto.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="col">
                         <div class="card" id="a4">
-                            <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
+                            <img class="card-img-top" src="./resources/Umberto/Complementos/Collar.png" alt="Collar" />
                             <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="col">
                         <div class="card" id="a5">
-                            <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
+                            <img class="card-img-top" src="./resources/Umberto/Complementos/Hoja.png" alt="Hoja" />
                             <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
