--- a/ClientApp/practiceactivity.html
+++ b/ClientApp/practiceactivity.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MIAU - Modo pr&aacute;ctica colores</title>
     <style>
         @import url("./styles/generalGameStyles.css");
