--- a/ClientApp/practiceactivity2.html
+++ b/ClientApp/practiceactivity2.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MIAU practice activity animals</title>
     <style type="text/css">
         @import url("./styles/generalGameStyles.css");
