--- a/ClientApp/customizeUmberto.html
+++ b/ClientApp/customizeUmberto.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="col">
                         <div class="card" id="a6">
-                            <img class="card-img-top" src="./resources/naranja.png" alt="Naranja" />
+                            <img class="card-img-top" src="./resources/Umberto/Complementos/Corona.png" alt="Corona" />
                             <div class="card-body">
                                 <p class="card-text">¡Equipado!</p>
                             </div>
