--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
       <div class="container-fluid">
         <button class="btn btn-primary" id="back" onclick="window.location.href = 'mainmenu.html';">
-          <img src="resources/arrow.png" alt="Flecha de retroceso" />
+          <img src="resources/arrow.png" alt="Flecha de retroceso">
         </button>
       </div>
     </nav>
@@ -42,7 +42,7 @@
     <div class="row pt-2">
       <div class="col col-custom">
         <div>
-          <button class="btn-custom botones buttonColores" aria-label="Botón colores" alt="Botón tema colores"
+          <button class="btn-custom botones buttonColores" aria-label="Botón colores"
             onclick="window.location.href = 'practiceactivity.html';">
             <svg class="svgColores svgBoton"></svg>
           </button>
@@ -59,7 +59,7 @@
       </div>
       <div class="col col-custom">
         <div>
-          <button class="btn-custom botones buttonAnimales" aria-label="Botón tema animales" alt="Botón tema animales"
+          <button class="btn-custom botones buttonAnimales" aria-label="Botón tema animales"
             onclick="window.location.href = 'practiceactivity2.html';">
             <svg class="svgAnimales svgBoton"></svg>
           </button>
@@ -70,7 +70,7 @@
     <div class="row mt-n1">
       <div class="col col-custom">
         <div>
-          <button class="btn-custom botones buttonNumeros" aria-label="Botón tema números" alt="Botón tema números"
+          <button class="btn-custom botones buttonNumeros" aria-label="Botón tema números"
             onclick="window.location.href = 'practiceactivity3.html';">
             <svg class="svgNumeros svgBoton"></svg>
           </button>
