--- a/ClientApp/studyanimals.html
+++ b/ClientApp/studyanimals.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MIAU - Modo estudio animales</title>
-    <style type="text/css">
+    <style>
         @import url("./styles/studyActivities/studyAnimals.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
             <button id="back" class="btn btn-primary" onclick="window.location.href = 'studymode.html';">
-                <img src="resources/arrow.png" alt="Flecha de retroceso" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso">
             </button>
         </div>
     </nav>
@@ -34,24 +34,24 @@
         <div id="Animals" class="mx-auto d-block container-fluid">
             <div class="row">
                 <div id="dog" class="card" tabindex="0" aria-hidden="true">
-                    <img src="./resources/animals/dog.png" aria-hidden="true" alt="imagen de  un perro" />
-                    <p class="hover-text" aria-hidden="true">Perro<br />Dog<br /></p>
+                    <img src="./resources/animals/dog.png" aria-hidden="true" alt="imagen de  un perro">
+                    <p class="hover-text" aria-hidden="true">Perro<br>Dog<br></p>
                 </div>
                 <div id="shark" class="card" tabindex="0">
-                    <img src="./resources/animals/shark.png" alt="imagen de un tiburón" />
-                    <p class="hover-text card-text" aria-hidden="true">Tiburón<br />Shark<br /></p>
+                    <img src="./resources/animals/shark.png" alt="imagen de un tiburón">
+                    <p class="hover-text card-text" aria-hidden="true">Tiburón<br>Shark<br></p>
                 </div>
                 <div id="lion" class="card" tabindex="0">
-                    <img src="./resources/animals/lion.png" alt="imagen de un león" />
-                    <p class="hover-text card-text" aria-hidden="true">León<br />Lion<br /></p>
+                    <img src="./resources/animals/lion.png" alt="imagen de un león">
+                    <p class="hover-text card-text" aria-hidden="true">León<br>Lion<br></p>
                 </div>
                 <div id="sheep" class="card" tabindex="0">
-                    <img src="./resources/animals/sheep.png" alt="imagen de una oveja" />
-                    <p class="hover-text card-text" aria-hidden="true">Oveja<br />Sheep<br /></p>
+                    <img src="./resources/animals/sheep.png" alt="imagen de una oveja">
+                    <p class="hover-text card-text" aria-hidden="true">Oveja<br>Sheep<br></p>
                 </div>
                 <div id="elephant" class="card" tabindex="0">
-                    <img src="./resources/animals/elephant.png" alt="imagen de un elefante" />
-                    <p class="hover-text card-text" aria-hidden="true">Elefante<br />Elephant<br /></p>
+                    <img src="./resources/animals/elephant.png" alt="imagen de un elefante">
+                    <p class="hover-text card-text" aria-hidden="true">Elefante<br>Elephant<br></p>
                 </div>
             </div>
         </div>
