--- a/ClientApp/studymode.html
+++ b/ClientApp/studymode.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
             <button id="back" class="btn btn-primary" onclick="window.location.href = 'mainmenu.html';">
-                <img src="resources/arrow.png" alt="Flecha de retroceso" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso">
             </button>
         </div>
     </nav>
