--- a/ClientApp/studynumbers.html
+++ b/ClientApp/studynumbers.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Estudiar números - MIAU</title>
-    <style type="text/css">
+    <style>
         @import url("./styles/studyActivities/studyNumbers.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
             <button id="back" class="btn btn-primary" onclick="window.location.href = 'studymode.html';">
-                <img src="resources/arrow.png" alt="Flecha de retroceso" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso">
             </button>
         </div>
     </nav>
@@ -36,45 +36,45 @@
         <div id="Numbers" class="mx-auto d-block container-fluid">
             <div class="row">
                 <div id="n1" class="card" tabindex="0">
-                    <img src="./resources/numbers/1.png" alt="Número 1" />
-                    <p class="hover-text" aria-hidden="true">Uno<br />
-                        <i lang="en">One</i><br />
+                    <img src="./resources/numbers/1.png" alt="Número 1">
+                    <p class="hover-text" aria-hidden="true">Uno<br>
+                        <i lang="en">One</i><br>
                     </p>
                 </div>
                 <div id="n2" class="card" tabindex="0">
-                    <img src="./resources/numbers/2.png" alt="Número 2" />
-                    <p class="hover-text card-text" aria-hidden="true">Dos<br />
-                        <i lang="en">Two</i><br />
+                    <img src="./resources/numbers/2.png" alt="Número 2">
+                    <p class="hover-text card-text" aria-hidden="true">Dos<br>
+                        <i lang="en">Two</i><br>
                     </p>
                 </div>
                 <div id="n3" class="card" tabindex="0">
-                    <img src="./resources/numbers/3.png" alt="Número 3" />
-                    <p class="hover-text card-text" aria-hidden="true">Tres<br />
-                        <i lang="en">Three</i><br />
+                    <img src="./resources/numbers/3.png" alt="Número 3">
+                    <p class="hover-text card-text" aria-hidden="true">Tres<br>
+                        <i lang="en">Three</i><br>
                     </p>
                 </div>
                 <div id="n4" class="card" tabindex="0">
-                    <img src="./resources/numbers/4.png" alt="Número 4" />
-                    <p class="hover-text card-text" aria-hidden="true">Cuatro<br />
-                        <i lang="en">Four</i><br />
+                    <img src="./resources/numbers/4.png" alt="Número 4">
+                    <p class="hover-text card-text" aria-hidden="true">Cuatro<br>
+                        <i lang="en">Four</i><br>
                     </p>
                 </div>
                 <div id="n5" class="card" tabindex="0">
-                    <img src="./resources/numbers/5.png" alt="Número 5" />
-                    <p class="hover-text card-text" aria-hidden="true">Cinco<br />
-                        <i lang="en">Five</i><br />
+                    <img src="./resources/numbers/5.png" alt="Número 5">
+                    <p class="hover-text card-text" aria-hidden="true">Cinco<br>
+                        <i lang="en">Five</i><br>
                     </p>
                 </div>
                 <div id="n6" class="card" tabindex="0">
-                    <img src="./resources/numbers/6.png" alt="Número 6" />
-                    <p class="hover-text card-text" aria-hidden="true">Seis<br />
-                        <i lang="en">Six</i><br />
+                    <img src="./resources/numbers/6.png" alt="Número 6">
+                    <p class="hover-text card-text" aria-hidden="true">Seis<br>
+                        <i lang="en">Six</i><br>
                     </p>
                 </div>
                 <div id="n10" class="card" tabindex="0">
-                    <img src="./resources/numbers/10.png" alt="Número 10" />
-                    <p class="hover-text card-text" aria-hidden="true">Diez<br />
-                        <i lang="en">Ten</i><br />
+                    <img src="./resources/numbers/10.png" alt="Número 10">
+                    <p class="hover-text card-text" aria-hidden="true">Diez<br>
+                        <i lang="en">Ten</i><br>
                     </p>
                 </div>
             </div>
