--- a/ClientApp/index.html
+++ b/ClientApp/index.html
@@ -4,41 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <title>MIAU</title>
-    <style type="text/css">
+    <style>
         @import url("styles/indexStyle.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
 </head>
 
-<body aria-label="Pantalla de inicio">
+<body>
     <div class="container" aria-hidden="true">
         <div class="row justify-content-center mt-5">
             <div class="col-md-5">
 
-                    <div id="tarjeta" class="card text-center" aria-label="Panel de inicio">
-                        <div id="cabecera" class="card-header">
-                            <img id="logoCard" src="resources/LogoMorado.png" alt="MIAU logo" class="w-100"/>
-                        </div>
-                        <div class="card-body">
-                            <h1 id="titulico">¡Practica tu ingl&eacute;s mientras juegas!</h1>
-                        </div>
-                        <div class="card-body">
-                            <button id="Empezar" class="btn btn-primary d-inline-flex p-0 btn-light btn-block" onclick="window.location.href = './login.html';"
-                                aria-label="pulsar para iniciar" tabindex="0">
-                                <img src="resources/play-button.png" alt="Inicio" class="w-100" aria-hidden="true">
-                            </button>
-                        </div>
+                <div id="tarjeta" class="card text-center">
+                    <div id="cabecera" class="card-header">
+                        <img id="logoCard" src="resources/LogoMorado.png" alt="MIAU logo" class="w-100">
                     </div>
+                    <div class="card-body">
+                        <h1 id="titulico">¡Practica tu ingl&eacute;s mientras juegas!</h1>
+                    </div>
+                    <div class="card-body">
+                        <button id="Empezar" class="btn btn-primary d-inline-flex p-0 btn-light btn-block"
+                            onclick="window.location.href = './login.html';" aria-label="pulsar para iniciar"
+                            tabindex="0">
+                            <img src="resources/play-button.png" alt="Inicio" class="w-100" aria-hidden="true">
+                        </button>
+                    </div>
+                </div>
 
             </div>
         </div>
-        
+
     </div>
 
     <!--<script src="js/index.js"></script>-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
 </body>
 
