--- a/ClientApp/login.html
+++ b/ClientApp/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MIAU login page</title>
-    <style type="text/css">
+    <style>
         @import url("styles/loginStyle.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
@@ -17,8 +17,8 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm" aria-label="Barra de navegación">
         <div class="col-1">
             <button id="back" class="btn btn-primary" onclick="window.location.href = 'index.html'"
-                aria-label="Botón de retorno a la página de inicio" role="button">
-                <img src="resources/arrow.png" alt="Flecha de retroceso" />
+                aria-label="Botón de retorno a la página de inicio">
+                <img src="resources/arrow.png" alt="Flecha de retroceso">
             </button>
         </div>
     </nav>
@@ -28,16 +28,16 @@
                 <div class="col-md-5">
                     <div id="tarjeta" class="card text-center" aria-label="Panel de inicio">
                         <div id="cabecera" class="card-header">
-                            <img id="logoCard" src="resources/LogoMorado.png" alt="MIAU logo" class="w-100" />
+                            <img id="logoCard" src="resources/LogoMorado.png" alt="MIAU logo" class="w-100">
                         </div>
                         <div class="card-body">
                             <fieldset id="cuadrito1" aria-label="Texto que pregunta cómo te llamas">
                                 <h1> ¿Cómo te llamas? </h1>
                             </fieldset>
-                            <form id="formnombre" role="form">
+                            <form id="formnombre">
                                 <p>Introduzca su nombre: </p>
                                 <input class="form-control" type="text" placeholder="nombre" maxlength="20" size="20"
-                                    id="nombre" aria-label="Entrada de texto para el nombre" /><br>
+                                    id="nombre" aria-label="Entrada de texto para el nombre"><br>
                                 <button id="botoncico" type="button" class="btn btn-success"
                                     aria-label="Entremos al juego"> ¡Vamos! </button>
                             </form>
@@ -49,10 +49,10 @@
                 <div class="col-md-5 mt-3 mt-md-0">
                     <div class="UmbertoDiag">
                         <img src="./resources/bubbles/bubbleholaumberto.png" id="burbuja" tabindex="1"
-                            aria-label="Umberto el gato te da la bienvenida, Introduce tu nombre en la entrada de texto"
+                            aria-label="Umberto el gato te da la bienvenida, introduce tu nombre en la entrada de texto"
                             alt="Introduce tu nombre en la entrada de texto">
                         <div class="float-right">
-                            <img src="resources/Umberto.png" id="Umberto" alt="Image of Umberto the cat">
+                            <img src="resources/Umberto.png" id="Umberto" alt="Umberto, el gato">
                         </div>
                     </div>
                 </div>
