--- a/ClientApp/practiceactivity2.html
+++ b/ClientApp/practiceactivity2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MIAU practice activity animals</title>
-    <style type="text/css">
+    <style>
         @import url("./styles/generalGameStyles.css");
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
             <button id="back" class="btn btn-primary" onclick="window.location.href = 'practicemode.html';">
-                <img src="resources/arrow.png" alt="Flecha de retroceso" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso">
             </button>
         </div>
         <div class="col">
@@ -30,19 +30,18 @@
     <div id="game-container">
         <h1>¿C&oacute;mo se llama este animal?</h1>
         <h2>Arrastra las letras al espacio que quieras, o hazles click para moverlas al primer espacio libre.</h2>
-        <img src="resources/Umberto.png" width="205" height="auto" id="animal-display" aria-label="Pista"
-            alt="An animal" tabindex="0">
+        <img src="resources/Umberto.png" id="animal-display" aria-label="Pista" alt="An animal" tabindex="0">
         <div id="answer" tabindex="0" aria-label="Respuesta">
 
         </div>
 
         <div id="letters" aria-label="Letras sin usar"></div>
-        <button id="verify" disabled="true" aria-disabled="true">Verificar</button>
+        <button id="verify" disabled>Verificar</button>
     </div>
+    <script src="js/animalGame.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
-<script src="js/animalGame.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
 
 </html>
