--- a/ClientApp/index.html
+++ b/ClientApp/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MIAU</title>
+    <title>MIAU - Index</title>
     <style>
         @import url("styles/indexStyle.css");
     </style>
