--- a/ClientApp/login.html
+++ b/ClientApp/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MIAU login page</title>
+    <title>MIAU - Login</title>
     <style>
         @import url("styles/loginStyle.css");
     </style>
