--- a/ClientApp/practiceactivity3.html
+++ b/ClientApp/practiceactivity3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MIAU - Pr&aacute;tica los números</title>
+    <title>MIAU - Modo pr&aacute;tica números</title>
     <style>
         @import url("./styles/generalGameStyles.css");
     </style>
